prepare ipfs funcs
